<resources>
    <string name="app_name">小电影</string>
    <string name="test">测试样式</string>
    <string name="web_detail_comment">评论</string>
    <string name="web_detail_zan">赞</string>
    <string name="web_detail_more">更多</string>
    <string name="toolbar_share">分享</string>
    <string name="text_topic">专题</string>
    <string name="text_check_more">查看全部</string>
    <string name="text_hot_article">热门文章</string>
    <string name="subscription">订阅</string>
    <string name="text_all_topic">全部专题</string>
    <string name="search">搜索</string>
    <string name="article">文章</string>
    <string name="movie">电影</string>
    <string name="search_purpose">请输入搜索的内容</string>
    <string name="share">分享</string>
    <string name="WannaSee">想看</string>
    <string name="HadSaw">已看</string>
    <string name="Recommend">推荐</string>
    <string name="login_now">马上登陆</string>
    <string name="synopsis">剧情简介</string>
    <string name="title_head">文章列表</string>
    <string name="cast">演员</string>
    <string name="prevue">预告片和花絮</string>
    <string name="stage_photo">剧照</string>
    <string name="user_comments">用户评论</string>
    <string name="dialog_wantsee">想看</string>
    <string name="dialog_alreadtsee">已看</string>
    <string name="dialog_writecomment">写影评</string>
    <string name="discover_confirm_actor">演员</string>
    <string name="discover_confirm_director">导演</string>
    <string name="web_dialog_collect">收藏文章</string>
    <string name="load_more">加载更多</string>
</resources>
