<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_want_see"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/dialog_wantsee"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/colorTipGray"/>

    <TextView
        android:id="@+id/dialog_already_see"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/dialog_alreadtsee"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/colorTipGray"/>

    <TextView
        android:id="@+id/dialog_write_comment"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/dialog_writecomment"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/colorTipGray"/>

    <RelativeLayout
        android:id="@+id/dialog_cancle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerInParent="true"
            android:src="@drawable/video_share_cancel_press"
            />
    </RelativeLayout>
</LinearLayout>