<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_movie_activity"
            style="@style/Theme.AppCompat"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorWhite"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:navigationIcon="@drawable/back_min">

            <TextView
                android:id="@+id/tv_movie_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/movie"
                android:textColor="@color/colorBlack"
                android:textSize="22sp"/>
        </android.support.v7.widget.Toolbar>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorRecommendBackground"/>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll_view_movie_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_movie_activity"
        android:background="@color/colorBackground"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="horizontal"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/iv_movie_detail_background"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorMovieDetailBackground"
                    android:scaleType="centerCrop"/>

                <ImageView
                    android:id="@+id/iv_movie_detail_pic"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:scaleType="centerCrop"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@id/iv_movie_detail_pic"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_movie_detail_title"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:maxLines="1"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/tv_movie_detail_original_title"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:gravity="top"
                        android:maxLines="2"
                        android:textColor="@color/colorWhite"
                        android:textSize="11sp"/>

                    <TextView
                        android:id="@+id/tv_movie_detail_countries"
                        style="@style/MovieDetailIntroduceText"/>

                    <TextView
                        android:id="@+id/tv_movie_detail_genres"
                        style="@style/MovieDetailIntroduceText"/>

                    <TextView
                        android:id="@+id/tv_movie_detail_durations"
                        style="@style/MovieDetailIntroduceText"/>

                    <TextView
                        android:id="@+id/tv_movie_detail_pubdates"
                        style="@style/MovieDetailIntroduceText"/>
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorWhite"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/btn_movie_wanna_see"
                    style="@style/MovieIntentionButton"
                    android:drawableLeft="@drawable/movie_btn_jk"
                    android:text="@string/WannaSee"/>

                <TextView
                    android:id="@+id/btn_movie_had_saw"
                    style="@style/MovieIntentionButton"
                    android:drawableLeft="@drawable/movie_btn_new_jk_n"
                    android:text="@string/HadSaw"/>

                <TextView
                    android:id="@+id/btn_movie_recommend"
                    style="@style/MovieIntentionButton"
                    android:drawableLeft="@drawable/movie_btn_tj_new"
                    android:text="@string/Recommend"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_movie_synopsis_expand"
                style="@style/MovieDetailLinearLayoutContainer"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TextMovieDetailLittleTitle"
                    android:text="@string/synopsis"/>

                <com.ms.square.android.expandabletextview.ExpandableTextView
                    xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/expand_movie_synopsis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    expandableTextView:animAlphaStart="1"
                    expandableTextView:animDuration="200"
                    expandableTextView:maxCollapsedLines="5">

                    <!--android:id="@+id/tv_movie_synopsis_content"-->
                    <TextView
                        android:id="@+id/expandable_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:lineSpacingExtra="3.5dp"
                        android:textSize="14.5dp"/>

                    <!--android:id="@+id/iv_movie_synopsis_expand_pic"-->
                    <ImageButton
                        android:id="@+id/expand_collapse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|bottom"
                        android:layout_marginTop="5dp"
                        android:background="@android:color/transparent"
                        android:scaleType="center"
                        android:src="@drawable/text_expand"
                        />
                </com.ms.square.android.expandabletextview.ExpandableTextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_casts"
                style="@style/MovieDetailLinearLayoutContainer"
                android:layout_height="240dp"
                android:orientation="vertical">

                <TextView
                    style="@style/TextMovieDetailLittleTitle"
                    android:text="@string/cast"/>

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="none">

                    <LinearLayout
                        android:id="@+id/ll_casts_container"
                        style="@style/MovieDetailScrollViewContainer"/>
                </HorizontalScrollView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_trailers"
                style="@style/MovieDetailLinearLayoutContainer"
                android:layout_height="180dp"
                android:orientation="vertical">

                <TextView
                    style="@style/TextMovieDetailLittleTitle"
                    android:text="@string/prevue"/>

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="none">

                    <LinearLayout
                        android:id="@+id/ll_prevue_container"
                        style="@style/MovieDetailScrollViewContainer"/>
                </HorizontalScrollView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_stage_photo"
                style="@style/MovieDetailLinearLayoutContainer"
                android:layout_height="160dp"
                android:orientation="vertical">

                <TextView
                    style="@style/TextMovieDetailLittleTitle"
                    android:text="@string/stage_photo"/>

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="none">

                    <LinearLayout
                        android:id="@+id/ll_stage_photo_container"
                        style="@style/MovieDetailScrollViewContainer"/>
                </HorizontalScrollView>
            </LinearLayout>

            <LinearLayout
                style="@style/MovieDetailLinearLayoutContainer"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_movie_user_comments"
                    style="@style/TextMovieDetailLittleTitle"
                    android:text="@string/user_comments"/>

                <ListView
                    android:id="@+id/lv_movie_user_comments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:scrollbars="none"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_movie_comment_load_more"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/load_more"
                android:visibility="gone"
                android:background="@android:color/transparent"
                android:textColor="@color/text_topic_all"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>