<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorWhite"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_search_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:clickable="true"
            android:src="@drawable/back_min"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="15">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/category_search_background"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:orientation="horizontal">
                <!--android:focusable="true"-->
                <!--android:focusableInTouchMode="true"-->

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="7dp"
                    android:src="@drawable/iv_topic_search_white"/>

                <EditText
                    android:id="@+id/et_search_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="25dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/search_purpose"
                    android:singleLine="true"
                    android:textColor="@color/colorTabText"
                    android:textCursorDrawable="@drawable/space_line"
                    android:textSize="16sp"/>
            </LinearLayout>

            <ImageButton
                android:id="@+id/ib_search_content_delete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:visibility="invisible"
                android:layout_marginRight="8dp"
                android:background="@android:color/transparent"
                android:src="@drawable/icon_delete"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_search_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/search"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorWhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_search_type_article"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/article"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_search_type_movie"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/movie"
                android:textSize="16sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorRecommendBackground"/>
    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_search_type"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>